--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
              <div class="dates">
                <div class="info-dates">
                <select name="monthOfYear" class="info expiring" id="month">
-                 <option disabled selected>Mes</option>
+                 <option disabled selected value= "-">Mes</option>
                  <option value="1">1</option>
                  <option value="2">2</option>
                  <option value="3">3</option>
@@ -76,7 +76,7 @@
 
              <div class="info-dates">
               <select name="years" id="year">
-                <option disabled selected>Año</option>
+                <option disabled selected value="-">Año</option>
                 <option value="21">21</option>
                 <option value="22">22</option>
                 <option value="23">23</option>
@@ -119,5 +119,6 @@
     <script src="index.js" type="module"></script> 
     <!-- <script src="validator.js" type="module"></script>  -->
     <script src="https://kit.fontawesome.com/b2d0f97688.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
   </body>
 </html>
