--- a/index.html
+++ b/index.html
@@ -10,28 +10,28 @@
       <!-- Contenido de la tarjeta -->
       <article class="principal">
        <section class="card" id="card">
-         <div class="chip">
+         <section class="chip">
            <img src="images/chip.png" alt="">
-         </div>
-         <div class="fillData">
-           <div class= "inData" id="credNumb">
+         </section>
+         <section class="fillData">
+           <section class= "inData" id="credNumb">
              <p class="data">Número de tarjeta</p>
              <p class="number" id="hideNumb">#### #### #### ####</p>
-           </div>
+           </section>
 
-            <div class="box"> <!-- Porque tiene distinto orden dento de la tarjeta -->
-            <div class="inData" id="name">
+            <section class="box"> <!-- Porque tiene distinto orden dento de la tarjeta -->
+            <section class="inData" id="name">
               <p class="data">Nombre del titular</p>
               <p class="titularName" >Lorem Ipsum</p> 
-            </div>
-            <div class="inData" id="expiration">
+            </section>
+            <section class="inData" id="expiration">
               <p class="data">expira</p>
               <p class="expire"><span class="monthCard">00</span> / <span class="yearCard">00</span></p>
-              <!-- <div class="logo">
+              <!-- <section class="logo">
                 <img src="images/mclogo.png" alt="mastercard"> --> 
-            </div> 
-            </div>
-          </div>
+            </section> 
+            </section>
+          </section>
         </section>
       </article>
     </header>
@@ -40,23 +40,23 @@
     <main>
          <article class="firstView" id="firstPage">
          <form action="" class="dataContainer" id="dataContainer">
-           <div class="info">
+           <section class="info">
              <p class="showData">Número de la tarjeta</p>
              <input type="text" id="cardNumber" placeholder="Ingresa número de la tarjeta" maxlength="16" autocomplete="off">
              <i class="far fa-credit-card"></i>
-           </div>
-           <div class="info">
+           </section>
+           <section class="info">
             <p class="showData">Nombre que figura en la tarjeta</p>
             <input type="text" id="ownerName" placeholder="Ingresa nombre del titular" maxlength="24" autocomplete="off">
             <i class="fas fa-user"></i>
-           </div>
+           </section>
           
             <!-- Box de mes y año  -->
-           <div class="dates">
-             <div class="info expiring">
+           <section class="dates">
+             <section class="info expiring">
              <p class="showData">Fecha de vencimiento</p>
-             <div class="dates">
-               <div class="info-dates">
+             <section class="dates">
+               <section class="info-dates">
                <select name="monthOfYear" class="info expiring" id="month">
                  <option disabled selected value= "-">Mes</option>
                  <option value="1">1</option>
@@ -72,9 +72,9 @@
                  <option value="11">11</option>
                  <option value="12">12</option>
                </select>
-             </div>
+             </section>
 
-             <div class="info-dates">
+             <section class="info-dates">
               <select name="years" id="year">
                 <option disabled selected value="-">Año</option>
                 <option value="21">21</option>
@@ -98,10 +98,10 @@
                 <option value="39">39</option>
                 <option value="40">40</option>
               </select>
-            </div>
-            </div>
-             </div>
-           </div>
+            </section>
+            </section>
+             </section>
+           </section>
            <button class="btn" type="button" id="btnValidate">Realiza el pago</button>
           </form>
           </article>
